fixed grid row spacing

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ body {
 /*     height: 85vh; */
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr) auto auto auto;
+    grid-template-rows: repeat(2, 20em) auto auto auto;
     grid-gap: 30px;
     padding: 20px;
 }
